# tar-async

./: Cargo.toml
examples/: chunked.rs  shred.rs
src/: archive.rs  decode.rs  error.rs  header.rs  lib.rs  pax.rs  raw.rs
src/decode/: flat.rs  full.rs  mod.rs  pax.rs  raw.rs  time.rs
src/encode/: raw.rs
test-data/: a.tar
