[package]
name = "tar-async"
version = "0.1.0"
authors = ["Przemysław K. Rekucki <przemyslaw.rekucki@golem.network>"]
edition = "2018"

[dependencies]
tar="0.4.20"
futures="0.1"
bytes="0.4.11"
failure="0.1.5"

[dev-dependencies]
tokio="0.1"
tokio-fs="0.1.4"
tokio-io="0.1.10"
tokio-codec = "0.1.1"
tokio-threadpool="0.1.9"
structopt = "0.2"

